--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -178,8 +178,7 @@
             android:background="@color/colorPrimaryDark"
             android:text="00"
             android:layout_row="0"
-            android:layout_column="0"
-            />
+            android:layout_column="0" />
 
         <TextView
             android:layout_width="wrap_content"
