--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -64,17 +64,18 @@
         android:id="@+id/hsListScoreHead"
         android:layout_toEndOf="@+id/hsListUser"
         android:textColor="#000000"
-
+        android:layout_marginEnd="95dp"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/hsListScore"
+        android:layout_marginEnd="95dp"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/hsListScoreHead"
         android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/hsList"/>
+        android:layout_toEndOf="@+id/hsList"/>
 
     <Button
         android:text="Play"
@@ -95,7 +96,8 @@
         android:hint="Enter your name"
         android:layout_alignBottom="@+id/playButton"
         android:layout_toStartOf="@+id/playButton"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        />
 
     <Button
         android:text="Reset Game"
@@ -105,7 +107,8 @@
         android:onClick="resetGame"
         android:visibility="invisible"
         android:layout_above="@+id/hsListUser"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        />
 
     <TextView
         android:layout_width="175dp"
@@ -123,6 +126,40 @@
         android:id="@+id/hsListRank"
         android:layout_below="@+id/hsListRankHead"
         android:layout_alignParentBottom="true" />
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/playButton"
+        android:layout_toEndOf="@+id/userName">
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Easy"
+            android:tag="Easy"
+            android:onClick="diffSelect"
+            android:id="@+id/eButton"
+            />
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Medium"
+            android:tag="Medium"
+            android:onClick="diffSelect"
+            android:id="@+id/mButton"
+            />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hard"
+            android:tag="Hard"
+            android:onClick="diffSelect"
+            android:id="@+id/hButton"
+            />
+
+    </RadioGroup>
 
     <GridLayout
         android:layout_width="fill_parent"
@@ -196,7 +233,6 @@
             android:layout_row="1"
             android:layout_column="0" />
     </GridLayout>
-
 
 
 </RelativeLayout>
