--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -70,10 +70,9 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="165dp"
         android:id="@+id/hsListScore"
         android:layout_marginEnd="95dp"
-        android:layout_alignParentBottom="true"
         android:layout_below="@+id/hsListScoreHead"
         android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/hsList"/>
@@ -113,7 +112,7 @@
 
     <TextView
         android:layout_width="175dp"
-        android:layout_height="match_parent"
+        android:layout_height="165dp"
         android:id="@+id/hsList"
         android:layout_below="@+id/hsListUser"
         android:layout_toEndOf="@+id/hsListRank"
@@ -121,11 +120,10 @@
 
     <TextView
         android:layout_width="30dp"
-        android:layout_height="wrap_content"
+        android:layout_height="165dp"
         android:text="1\n2\n3\n4\n5\n6\n7\n8\n9\n10"
         android:id="@+id/hsListRank"
-        android:layout_below="@+id/hsListRankHead"
-        android:layout_alignParentBottom="true" />
+        android:layout_below="@+id/hsListRankHead" />
 
     <RadioGroup
         android:layout_width="wrap_content"
