--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:alpha="1"
     tools:context="com.jfletcher.braingame.MainActivity">
 
     <TextView
@@ -19,6 +20,37 @@
         android:id="@+id/timer"
         android:textSize="30sp"
         android:padding="6sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="90sp"
+        android:text="+3"
+        android:textSize="20sp"
+        android:alpha="0"
+        android:id="@+id/plusThreeTime"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="90sp"
+        android:layout_alignParentEnd="true"
+        android:text="+1"
+        android:textSize="20sp"
+        android:alpha="0"
+        android:id="@+id/plusOneScore"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="90sp"
+        android:layout_alignParentEnd="true"
+        android:text="-1"
+        android:textSize="20sp"
+        android:alpha="0"
+        android:id="@+id/minusOneScore"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -229,6 +261,33 @@
             android:layout_row="1"
             android:layout_column="0" />
     </GridLayout>
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:alpha="0"
+        >
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/tableHeadRow"/>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </TableLayout>
 
 
 </RelativeLayout>
