--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -9,153 +9,238 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:alpha="1"
     tools:context="com.jfletcher.braingame.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/timer"
-        android:textSize="30sp"
-        android:padding="6sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="90sp"
-        android:text="+3"
-        android:textSize="20sp"
-        android:alpha="0"
-        android:id="@+id/plusThreeTime"
-        />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="90sp"
-        android:layout_alignParentEnd="true"
-        android:text="+1"
-        android:textSize="20sp"
-        android:alpha="0"
-        android:id="@+id/plusOneScore"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="90sp"
-        android:layout_alignParentEnd="true"
-        android:text="-1"
-        android:textSize="20sp"
-        android:alpha="0"
-        android:id="@+id/minusOneScore"
-        />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/score"
-        android:textSize="30sp"
-        android:padding="6sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="11dp"
-        android:id="@+id/mathProblem"
-        android:textSize="30sp" />
-
-    <TextView
-        android:layout_width="30dp"
-        android:layout_height="20dp"
-        android:text="@string/Rank"
-        android:layout_below="@+id/userName"
-        android:id="@+id/hsListRankHead"
-        android:textColor="#000000"
-        />
-
-    <TextView
-        android:layout_width="175dp"
-        android:layout_height="20dp"
-        android:text="@string/User_Name"
-        android:layout_below="@+id/userName"
-        android:id="@+id/hsListUser"
-        android:layout_toEndOf="@+id/hsListRankHead"
-        android:textColor="#000000"
-        />
-
-    <TextView
+    <RelativeLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:text="@string/Score"
-        android:layout_below="@+id/userName"
-        android:id="@+id/hsListScoreHead"
-        android:layout_toEndOf="@+id/hsListUser"
-        android:textColor="#000000"
-        android:layout_marginEnd="95dp"
-        />
+        android:layout_height="400sp"
+        android:id="@+id/levelTwoLayout"
+        android:translationX="-0dp"
+        android:alpha="1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="165dp"
-        android:id="@+id/hsListScore"
-        android:layout_marginEnd="95dp"
-        android:layout_below="@+id/hsListScoreHead"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/hsList"/>
 
-    <Button
-        android:text="Play"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/playButton"
-        android:layout_marginTop="200dp"
-        android:onClick="playGame"
-        android:layout_below="@id/score"
-        android:layout_alignEnd="@+id/score"/>
 
-    <EditText
+            <View android:background="#000000"
+                android:layout_width = "match_parent"
+                android:layout_height="1dp"
+                android:layout_alignParentBottom="true"
+                />
+
+            <Button
+                android:text="1"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:layout_columnWeight="1"
+                android:layout_marginStart="20sp"
+                android:gravity="center"
+                android:onClick="level2Click"
+                android:tag="1"
+                android:id="@+id/numBlock1" />
+
+            <Button
+                android:text="2"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:layout_marginStart="60sp"
+                android:layout_columnWeight="1"
+                android:gravity="center"
+                android:tag="2"
+                android:onClick="level2Click"
+                android:id="@+id/numBlock2" />
+
+            <Button
+                android:text="3"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:layout_marginStart="100sp"
+                android:gravity="center"
+                android:tag="3"
+                android:onClick="level2Click"
+                android:id="@+id/numBlock3" />
+            <Button
+                android:text="4"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:layout_marginStart="140sp"
+                android:gravity="center"
+                android:tag="4"
+                android:onClick="level2Click"
+                android:id="@+id/numBlock4" />
+            <Button
+                android:text="5"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:layout_marginStart="180sp"
+                android:gravity="center"
+                android:tag="5"
+                android:onClick="level2Click"
+                android:id="@+id/numBlock5" />
+            <Button
+                android:text="6"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:layout_marginStart="220sp"
+                android:gravity="center"
+                android:tag="6"
+                android:onClick="level2Click"
+                android:id="@+id/numBlock6" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/userName"
-        android:hint="Enter your name"
-        android:layout_alignBottom="@+id/playButton"
-        android:layout_toStartOf="@+id/playButton"
-        android:layout_alignParentStart="true"
-        />
+        android:layout_height="match_parent"
+        android:id="@+id/levelOneLayout"
+        android:translationX="8000dp"
+        android:alpha="1">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/timer"
+            android:textSize="30sp"
+            android:padding="6sp" />
 
-    <Button
-        android:text="Reset Game"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/resetScores"
-        android:onClick="resetGame"
-        android:visibility="invisible"
-        android:layout_above="@+id/hsListUser"
-        android:layout_alignParentStart="true"
-        />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="90sp"
+            android:text="+3"
+            android:textSize="20sp"
+            android:alpha="0"
+            android:id="@+id/plusThreeTime"
+            />
 
-    <TextView
-        android:layout_width="175dp"
-        android:layout_height="165dp"
-        android:id="@+id/hsList"
-        android:layout_below="@+id/hsListUser"
-        android:layout_toEndOf="@+id/hsListRank"
-         />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="90sp"
+            android:layout_alignParentEnd="true"
+            android:text="+1"
+            android:textSize="20sp"
+            android:alpha="0"
+            android:id="@+id/plusOneScore"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="90sp"
+            android:layout_alignParentEnd="true"
+            android:text="-1"
+            android:textSize="20sp"
+            android:alpha="0"
+            android:id="@+id/minusOneScore"
+            />
 
-    <TextView
-        android:layout_width="30dp"
-        android:layout_height="165dp"
-        android:text="1\n2\n3\n4\n5\n6\n7\n8\n9\n10"
-        android:id="@+id/hsListRank"
-        android:layout_below="@+id/hsListRankHead" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/score"
+            android:textSize="30sp"
+            android:padding="6sp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="11dp"
+            android:id="@+id/mathProblem"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="30dp"
+            android:layout_height="20dp"
+            android:text="@string/Rank"
+            android:layout_below="@+id/userName"
+            android:id="@+id/hsListRankHead"
+            android:textColor="#000000"
+            />
+
+        <TextView
+            android:layout_width="175dp"
+            android:layout_height="20dp"
+            android:text="@string/User_Name"
+            android:layout_below="@+id/userName"
+            android:id="@+id/hsListUser"
+            android:layout_toEndOf="@+id/hsListRankHead"
+            android:textColor="#000000"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:text="@string/Score"
+            android:layout_below="@+id/userName"
+            android:id="@+id/hsListScoreHead"
+            android:layout_toEndOf="@+id/hsListUser"
+            android:textColor="#000000"
+            android:layout_marginEnd="95dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="165dp"
+            android:id="@+id/hsListScore"
+            android:layout_marginEnd="95dp"
+            android:layout_below="@+id/hsListScoreHead"
+            android:layout_alignParentEnd="true"
+            android:layout_toEndOf="@+id/hsList"/>
+
+        <Button
+            android:text="Play"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/playButton"
+            android:layout_marginTop="200dp"
+            android:onClick="playGame"
+            android:layout_below="@id/score"
+            android:layout_alignEnd="@+id/score"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/userName"
+            android:hint="Enter your name"
+            android:layout_alignBottom="@+id/playButton"
+            android:layout_toStartOf="@+id/playButton"
+            android:layout_alignParentStart="true"
+            />
+
+        <Button
+            android:text="Reset Game"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/resetScores"
+            android:onClick="resetGame"
+            android:visibility="invisible"
+            android:layout_above="@+id/hsListUser"
+            android:layout_alignParentStart="true"
+            />
+
+        <TextView
+            android:layout_width="175dp"
+            android:layout_height="165dp"
+            android:id="@+id/hsList"
+            android:layout_below="@+id/hsListUser"
+            android:layout_toEndOf="@+id/hsListRank"
+             />
+
+        <TextView
+            android:layout_width="30dp"
+            android:layout_height="165dp"
+            android:text="1\n2\n3\n4\n5\n6\n7\n8\n9\n10"
+            android:id="@+id/hsListRank"
+            android:layout_below="@+id/hsListRankHead" />
 
     <RadioGroup
         android:layout_width="wrap_content"
@@ -164,6 +249,7 @@
         android:layout_below="@+id/playButton"
         android:layout_toEndOf="@+id/userName"
         android:id="@+id/radioGroup">
+
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -262,32 +348,7 @@
             android:layout_column="0" />
     </GridLayout>
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:alpha="0"
-        >
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/tableHeadRow"/>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </TableLayout>
+    </RelativeLayout>
 
 
 </RelativeLayout>
