--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,120 +12,150 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.jfletcher.braingame.MainActivity">
 
-
-
-
     <RelativeLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/levelTwoLayout"
-        android:translationX="-800dp"
+        android:translationX="-00dp"
         android:alpha="1">
 
-        <TextView
-            android:layout_width="100sp"
-            android:layout_height="30sp"
-            android:id="@+id/levelTwoNum1"
-            android:text="00"
-            android:gravity="center"
-            android:layout_below="@+id/levelTwoLayoutNumbers"
-            android:layout_marginTop="40sp"
-            />
-        <TextView
-            android:layout_width="100sp"
-            android:layout_height="30sp"
-            android:id="@+id/levelTwoNum2"
-            android:text="00"
-            android:gravity="center"
-            android:layout_below="@+id/levelTwoLayoutNumbers"
-            android:layout_marginTop="40sp"
-            android:layout_marginLeft="100sp"
-            />
-        <TextView
-            android:layout_width="100sp"
-            android:layout_height="30sp"
-            android:id="@+id/levelTwoNum3"
-            android:text="00"
-            android:gravity="center"
-            android:layout_below="@+id/levelTwoLayoutNumbers"
-            android:layout_marginTop="40sp"
-            android:layout_marginLeft="200sp"
-            />
-
         <RelativeLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="400sp"
             android:id="@+id/levelTwoLayoutNumbers"
+            android:layout_centerHorizontal="true"
             >
 
             <View android:background="#000000"
-                android:layout_width = "match_parent"
+                android:layout_width = "wrap_content"
                 android:layout_height="1dp"
                 android:layout_alignParentBottom="true"
                 />
 
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                >
             <Button
                 android:text="1"
-                android:layout_width="40sp"
-                android:layout_height="40sp"
-                android:layout_columnWeight="1"
-                android:layout_marginStart="20sp"
-                android:gravity="center"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
                 android:onClick="level2Click"
                 android:tag="1"
                 android:id="@+id/numBlock1" />
 
             <Button
                 android:text="2"
-                android:layout_width="40sp"
-                android:layout_height="40sp"
-                android:layout_marginStart="60sp"
-                android:layout_columnWeight="1"
-                android:gravity="center"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_toEndOf="@+id/numBlock1"
                 android:tag="2"
                 android:onClick="level2Click"
                 android:id="@+id/numBlock2" />
 
             <Button
                 android:text="3"
-                android:layout_width="40sp"
-                android:layout_height="40sp"
-                android:layout_marginStart="100sp"
-                android:gravity="center"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_toEndOf="@+id/numBlock2"
                 android:tag="3"
                 android:onClick="level2Click"
                 android:id="@+id/numBlock3" />
             <Button
                 android:text="4"
-                android:layout_width="40sp"
-                android:layout_height="40sp"
-                android:layout_marginStart="140sp"
-                android:gravity="center"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_toEndOf="@+id/numBlock3"
                 android:tag="4"
                 android:onClick="level2Click"
                 android:id="@+id/numBlock4" />
             <Button
                 android:text="5"
-                android:layout_width="40sp"
-                android:layout_height="40sp"
-                android:layout_marginStart="180sp"
-                android:gravity="center"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_toEndOf="@+id/numBlock4"
                 android:tag="5"
                 android:onClick="level2Click"
                 android:id="@+id/numBlock5" />
             <Button
                 android:text="6"
-                android:layout_width="40sp"
-                android:layout_height="40sp"
-                android:layout_marginStart="220sp"
-                android:gravity="center"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_toEndOf="@+id/numBlock5"
                 android:tag="6"
                 android:onClick="level2Click"
                 android:id="@+id/numBlock6" />
 
+            </RelativeLayout>
+
     </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/levelTwoLayoutNumbers"
+            android:layout_centerHorizontal="true"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30sp"
+                android:padding="3sp"
+                android:id="@+id/levelTwoAnswerText"
+                android:background="@drawable/border"
+                android:text="Choose two numbers that total "
+                android:gravity="center"
+                android:layout_marginTop="10sp"
+                />
+
+            <TextView
+                android:layout_width="85sp"
+                android:layout_height="30sp"
+                android:id="@+id/levelTwoAnswer1"
+                android:text="00"
+                android:textSize="20sp"
+                android:textColor="#000"
+                android:background="@drawable/border"
+                android:gravity="center"
+                android:layout_marginTop="10sp"
+                android:layout_toEndOf="@+id/levelTwoAnswerText"
+                />
+
+            <TextView
+                android:layout_width="85sp"
+                android:layout_height="30sp"
+                android:id="@+id/levelTwoChoice1"
+                android:text="00"
+                android:gravity="center"
+                android:layout_marginTop="40sp"
+                />
+
+            <TextView
+                android:layout_width="30sp"
+                android:layout_height="30sp"
+                android:id="@+id/levelTwoFunction"
+                android:text="+"
+                android:gravity="center"
+                android:layout_marginTop="40sp"
+                android:layout_marginStart="85sp"
+                />
+
+            <TextView
+                android:layout_width="85sp"
+                android:layout_height="30sp"
+                android:id="@+id/levelTwoChoice2"
+                android:text="00"
+                android:gravity="center"
+                android:layout_marginTop="40sp"
+                android:layout_marginStart="115sp"
+                />
+
+
+
+        </RelativeLayout>
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -132,7 +163,8 @@
         android:layout_height="match_parent"
         android:id="@+id/levelOneLayout"
         android:translationX="0dp"
-        android:alpha="1">
+        android:alpha="0">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -257,7 +289,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/resetScores"
-            android:onClick="resetGame"
+            android:onClick="resetHSTable"
             android:visibility="invisible"
             android:layout_above="@+id/hsListUser"
             android:layout_alignParentStart="true"
