--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_height="match_parent"
         android:id="@+id/levelTwoLayout"
         android:translationX="-00dp"
-        android:alpha="1">
+        android:alpha="0">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -93,9 +93,10 @@
     </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/levelTwoLayoutNumbers"
+            android:background="@drawable/border"
             >
 
             <TextView
@@ -103,7 +104,6 @@
                 android:layout_height="30sp"
                 android:padding="5sp"
                 android:id="@+id/levelTwoAnswerText"
-                android:background="@drawable/border"
                 android:text="Choose two numbers that total "
                 android:textColor="#000"
                 android:gravity="center"
@@ -111,21 +111,31 @@
                 />
 
             <TextView
-                android:layout_width="85sp"
+                android:layout_width="45sp"
                 android:layout_height="30sp"
                 android:id="@+id/levelTwoAnswer1"
                 android:text="00"
                 android:textSize="20sp"
                 android:textColor="#000"
-                android:background="@drawable/border"
                 android:gravity="center"
+                android:background="@color/colorPrimary"
                 android:layout_marginTop="10sp"
                 android:layout_toEndOf="@+id/levelTwoAnswerText"
                 />
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="+3"
+                android:textSize="20sp"
+                android:layout_alignParentEnd="true"
+                android:alpha="0"
+                android:id="@+id/l2plusThreeTime"
+                />
+            <TextView
                 android:layout_width="85sp"
                 android:layout_height="30sp"
-                android:layout_toEndOf="@+id/levelTwoAnswer1"
+                android:layout_alignParentRight="true"
+                android:id="@+id/level2Time"
                 android:layout_marginTop="10sp"
                 android:textSize="20sp"
                 android:textColor="#000"
@@ -135,7 +145,8 @@
             <TextView
                 android:layout_width="85sp"
                 android:layout_height="30sp"
-                android:layout_toEndOf="@+id/levelTwoAnswer1"
+                android:layout_alignParentRight="true"
+                android:id="@+id/level2points"
                 android:layout_marginTop="40sp"
                 android:textSize="20sp"
                 android:textColor="#000"
@@ -145,8 +156,7 @@
 
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true">
+                android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="85sp"
@@ -189,7 +199,7 @@
         android:layout_height="match_parent"
         android:id="@+id/levelOneLayout"
         android:translationX="0dp"
-        android:alpha="0">
+        android:alpha="1">
 
         <TextView
             android:layout_width="wrap_content"
@@ -203,7 +213,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="90sp"
+            android:layout_marginStart="90sp"
             android:text="+3"
             android:textSize="20sp"
             android:alpha="0"
@@ -259,7 +269,7 @@
             />
 
         <TextView
-            android:layout_width="175dp"
+            android:layout_width="150dp"
             android:layout_height="20dp"
             android:text="@string/User_Name"
             android:layout_below="@+id/userName"
@@ -280,6 +290,21 @@
             />
 
         <TextView
+            android:layout_width="30dp"
+            android:layout_height="165dp"
+            android:text="1\n2\n3\n4\n5\n6\n7\n8\n9\n10"
+            android:id="@+id/hsListRank"
+            android:layout_below="@+id/hsListRankHead" />
+
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="165dp"
+            android:id="@+id/hsList"
+            android:layout_below="@+id/hsListUser"
+            android:layout_toEndOf="@+id/hsListRank"
+            />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="165dp"
             android:id="@+id/hsListScore"
@@ -296,7 +321,8 @@
             android:layout_marginTop="200dp"
             android:onClick="playGame"
             android:layout_below="@id/score"
-            android:layout_alignEnd="@+id/score"/>
+            android:layout_alignParentEnd="true"
+            />
 
         <EditText
             android:layout_width="match_parent"
@@ -306,7 +332,6 @@
             android:id="@+id/userName"
             android:hint="Enter your name"
             android:layout_alignBottom="@+id/playButton"
-            android:layout_toStartOf="@+id/playButton"
             android:layout_alignParentStart="true"
             />
 
@@ -321,20 +346,6 @@
             android:layout_alignParentStart="true"
             />
 
-        <TextView
-            android:layout_width="175dp"
-            android:layout_height="165dp"
-            android:id="@+id/hsList"
-            android:layout_below="@+id/hsListUser"
-            android:layout_toEndOf="@+id/hsListRank"
-             />
-
-        <TextView
-            android:layout_width="30dp"
-            android:layout_height="165dp"
-            android:text="1\n2\n3\n4\n5\n6\n7\n8\n9\n10"
-            android:id="@+id/hsListRank"
-            android:layout_below="@+id/hsListRankHead" />
 
     <RadioGroup
         android:layout_width="wrap_content"
